--- a/Test/Miruken.AspNetCore.Test.Site/Miruken.AspNetCore.Test.Site.csproj
+++ b/Test/Miruken.AspNetCore.Test.Site/Miruken.AspNetCore.Test.Site.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Source\Miruken.AspNetCore.Swagger\Miruken.AspNetCore.Swagger.csproj" />
     <ProjectReference Include="..\..\Source\Miruken.AspNetCore\Miruken.AspNetCore.csproj" />
   </ItemGroup>
 
