Demonstrated calling handlers from api controller

--- a/Test/Miruken.AspNetCore.Test.Site/Miruken.AspNetCore.Test.Site.csproj
+++ b/Test/Miruken.AspNetCore.Test.Site/Miruken.AspNetCore.Test.Site.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Source\Miruken.AspNetCore.Swagger\Miruken.AspNetCore.Swagger.csproj" />
     <ProjectReference Include="..\..\Source\Miruken.AspNetCore\Miruken.AspNetCore.csproj" />
+    <ProjectReference Include="..\Miruken.AspNetCore.Tests\Miruken.AspNetCore.Tests.csproj" />
   </ItemGroup>
 
 </Project>
