updating to release nugets

--- a/Test/Miruken.AspNetCore.Tests/Miruken.AspNetCore.Tests.csproj
+++ b/Test/Miruken.AspNetCore.Tests/Miruken.AspNetCore.Tests.csproj
@@ -8,8 +8,8 @@
     <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="2.2.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.8.0" />
-    <PackageReference Include="Miruken" Version="3.9.99-Alpha.106" />
-    <PackageReference Include="Miruken.Validate" Version="3.9.99-Alpha.106" />
+    <PackageReference Include="Miruken" Version="3.99.2" />
+    <PackageReference Include="Miruken.Validate" Version="3.99.2" />
     <PackageReference Include="MSTest.TestAdapter" Version="1.3.2" />
     <PackageReference Include="MSTest.TestFramework" Version="1.3.2" />
   </ItemGroup>
