--- a/Source/Miruken.AspNetCore/Miruken.AspNetCore.csproj
+++ b/Source/Miruken.AspNetCore/Miruken.AspNetCore.csproj
@@ -24,9 +24,9 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
-    <PackageReference Include="Miruken" Version="3.9.99-Alpha.106" />
-    <PackageReference Include="Miruken.Http" Version="3.9.99-Alpha.106" />
-    <PackageReference Include="Miruken.Validate" Version="3.9.99-Alpha.106" />
+    <PackageReference Include="Miruken" Version="3.99.2" />
+    <PackageReference Include="Miruken.Http" Version="3.99.2" />
+    <PackageReference Include="Miruken.Validate" Version="3.99.2" />
   </ItemGroup>
 
 </Project>
