--- a/Source/Miruken.AspNetCore.Swagger/Miruken.AspNetCore.Swagger.csproj
+++ b/Source/Miruken.AspNetCore.Swagger/Miruken.AspNetCore.Swagger.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -25,7 +25,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoFixture" Version="4.11.0" />
-    <PackageReference Include="Miruken.Http" Version="3.99.2" />
+    <PackageReference Include="Miruken.Http" Version="3.99.7" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="4.0.1" />
   </ItemGroup>
 
