--- a/Source/Miruken.AspNetCore.Swagger/Miruken.AspNetCore.Swagger.csproj
+++ b/Source/Miruken.AspNetCore.Swagger/Miruken.AspNetCore.Swagger.csproj
@@ -25,7 +25,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoFixture" Version="4.11.0" />
-    <PackageReference Include="Miruken.Http" Version="3.99.7" />
+    <PackageReference Include="Miruken.Http" Version="3.99.14-Alpha.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="4.0.1" />
   </ItemGroup>
 
