--- a/Source/Miruken.AspNetCore/Miruken.AspNetCore.csproj
+++ b/Source/Miruken.AspNetCore/Miruken.AspNetCore.csproj
@@ -17,9 +17,9 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
-    <PackageReference Include="Miruken" Version="3.99.7" />
-    <PackageReference Include="Miruken.Http" Version="3.99.7" />
-    <PackageReference Include="Miruken.Validate" Version="3.99.7" />
+    <PackageReference Include="Miruken" Version="3.99.14-Alpha.2" />
+    <PackageReference Include="Miruken.Http" Version="3.99.14-Alpha.2" />
+    <PackageReference Include="Miruken.Validate" Version="3.99.14-Alpha.2" />
   </ItemGroup>
 
 </Project>
