--- a/Source/Miruken.AspNetCore/Miruken.AspNetCore.csproj
+++ b/Source/Miruken.AspNetCore/Miruken.AspNetCore.csproj
@@ -13,12 +13,18 @@
     <PackageReleaseNotes>Summary of changes made in this release of the package.</PackageReleaseNotes>
     <LangVersion>latest</LangVersion>
     <OutputPath>bin\</OutputPath>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)'=='Debug'">
+      <AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
     <PackageReference Include="Miruken" Version="3.99.15-Alpha.3" />
     <PackageReference Include="Miruken.Http" Version="3.99.15-Alpha.3" />
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-beta2-19554-01" PrivateAssets="All"/>
     <PackageReference Include="Miruken.Validate" Version="3.99.15-Alpha.3" />
   </ItemGroup>
 
