--- a/Test/Miruken.AspNetCore.Tests/Miruken.AspNetCore.Tests.csproj
+++ b/Test/Miruken.AspNetCore.Tests/Miruken.AspNetCore.Tests.csproj
@@ -1,17 +1,33 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <TargetFrameworks>netcoreapp3.0;netcoreapp2.2</TargetFrameworks>
+  </PropertyGroup>
+
+  <!-- compilation flags -->
+  <PropertyGroup Condition=" '$(TargetFramework)' == 'netcoreapp2.2'">
+    <DefineConstants>NETSTANDARD;NETSTANDARD2_0</DefineConstants>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(TargetFramework)' == 'netcoreapp3.0'">
+    <DefineConstants>NETSTANDARD;NETSTANDARD2_1</DefineConstants>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />
-    <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="2.2.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.8.0" />
-    <PackageReference Include="Miruken" Version="3.99.15-Alpha.12" />
-    <PackageReference Include="Miruken.Validate" Version="3.99.15-Alpha.12" />
+    <PackageReference Include="Miruken" Version="3.99.15-Alpha.13" />
+    <PackageReference Include="Miruken.Validate" Version="3.99.15-Alpha.13" />
     <PackageReference Include="MSTest.TestAdapter" Version="1.3.2" />
     <PackageReference Include="MSTest.TestFramework" Version="1.3.2" />
+  </ItemGroup>
+
+  <ItemGroup Condition="$(DefineConstants.Contains('NETSTANDARD2_0'))">
+    <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="2.2.0" />
+  </ItemGroup>
+
+  <ItemGroup Condition="$(DefineConstants.Contains('NETSTANDARD2_1'))">
+    <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="3.0.0" />
   </ItemGroup>
 
   <ItemGroup>
