--- a/Source/Miruken.AspNetCore/Miruken.AspNetCore.csproj
+++ b/Source/Miruken.AspNetCore/Miruken.AspNetCore.csproj
@@ -29,10 +29,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Miruken" Version="4.1.1-Alpha.6" />
-    <PackageReference Include="Miruken.Http" Version="4.1.1-Alpha.6" />
+    <PackageReference Include="Miruken" Version="4.1.1" />
+    <PackageReference Include="Miruken.Http" Version="4.1.1" />
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-beta2-19554-01" PrivateAssets="All" />
-    <PackageReference Include="Miruken.Validate" Version="4.1.1-Alpha.6" />
+    <PackageReference Include="Miruken.Validate" Version="4.1.1" />
   </ItemGroup>
 
   <ItemGroup Condition="$(DefineConstants.Contains('NETSTANDARD2_0'))">
