--- a/Test/Miruken.AspNetCore.Tests/Miruken.AspNetCore.Tests.csproj
+++ b/Test/Miruken.AspNetCore.Tests/Miruken.AspNetCore.Tests.csproj
@@ -15,8 +15,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.8.0" />
-    <PackageReference Include="Miruken" Version="4.1.3" />
-    <PackageReference Include="Miruken.Validate" Version="4.1.3" />
+    <PackageReference Include="Miruken" Version="4.1.4-Alpha.4" />
+    <PackageReference Include="Miruken.Validate" Version="4.1.4-Alpha.4" />
     <PackageReference Include="MSTest.TestAdapter" Version="1.3.2" />
     <PackageReference Include="MSTest.TestFramework" Version="1.3.2" />
   </ItemGroup>
