--- a/Source/Miruken.AspNetCore.Swagger/Miruken.AspNetCore.Swagger.csproj
+++ b/Source/Miruken.AspNetCore.Swagger/Miruken.AspNetCore.Swagger.csproj
@@ -32,8 +32,9 @@
 
   <ItemGroup>
     <PackageReference Include="AutoFixture" Version="4.11.0" />
-    <PackageReference Include="Miruken.Http" Version="4.1.6-Alpha.6" />
-    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-beta2-19554-01" PrivateAssets="All" />
+    <PackageReference Include="Miruken" Version="4.1.6-Alpha.7" />
+    <PackageReference Include="Miruken.Http" Version="4.1.6-Alpha.7" />
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.0-beta-20204-02" PrivateAssets="All" />
   </ItemGroup>
 
   <ItemGroup Condition="$(DefineConstants.Contains('NETSTANDARD2_0'))">
