--- a/Test/Miruken.AspNetCore.Test.Site2_2/Miruken.AspNetCore.Test.Site2_2.csproj
+++ b/Test/Miruken.AspNetCore.Test.Site2_2/Miruken.AspNetCore.Test.Site2_2.csproj
@@ -8,6 +8,8 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.0-beta-20204-02" />
+    <PackageReference Include="Miruken" Version="4.1.6-Alpha.7" />
   </ItemGroup>
 
   <ItemGroup>
