--- a/Test/Miruken.AspNetCore.Test.Site3_1/Miruken.AspNetCore.Test.Site3_1.csproj
+++ b/Test/Miruken.AspNetCore.Test.Site3_1/Miruken.AspNetCore.Test.Site3_1.csproj
@@ -10,4 +10,9 @@
     <ProjectReference Include="..\Miruken.AspNetCore.Tests\Miruken.AspNetCore.Tests.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.0-beta-20204-02" />
+    <PackageReference Include="Miruken" Version="4.1.6-Alpha.7" />
+  </ItemGroup>
+
 </Project>
