--- a/Test/Miruken.AspNetCore.Tests/Miruken.AspNetCore.Tests.csproj
+++ b/Test/Miruken.AspNetCore.Tests/Miruken.AspNetCore.Tests.csproj
@@ -17,6 +17,8 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.6.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.1.1" />
     <PackageReference Include="MSTest.TestFramework" Version="2.1.1" />
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.0-beta-20204-02" />
+    <PackageReference Include="Miruken" Version="4.1.6-Alpha.7" />
   </ItemGroup>
 
   <ItemGroup Condition="$(DefineConstants.Contains('NETSTANDARD2_0'))">
